--- a/starup_website.html
+++ b/starup_website.html
@@ -293,6 +293,9 @@
                     <h1>Adele</h1>
                 </div>
             </div>
+            <form class="yourfav">
+                <input type="text">
+            </form>
         </div>
         <div id="footer">
             &copy; 2023 INTERSCOPE RECORDS
