--- a/starup_website.html
+++ b/starup_website.html
@@ -303,29 +303,31 @@
                 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: aliceblue;">
                 YOUR FAVOURITE ARTISTS </h2>
             <div class="fav_artists">
-            <script>
-                function addScientist() {
-                    var input = document.getElementById("scientistInput").value;
-                    var textbox = document.getElementById("scientistText");
-                    textbox.value += input + "\n";
-                }
-            </script>
-            <label for="scientistInput" style="font-size: 16pt;">Your Favorite Artist:</label>
-            <input type="text" id="scientistInput" name="scientistInput" style="padding-top: 8px; border-radius: 3px;margin-left: 5px;">
-            <button onclick="addScientist()" style="border: solid 1px grey; border-radius: 5px; padding: 0 8px; background-color: aliceblue; color: black;">+</button>
-            <br>
-             <br> 
-            <textarea id="scientistText" rows="5" cols="30"></textarea>
+                <script>
+                    function addScientist() {
+                        var input = document.getElementById("scientistInput").value;
+                        var textbox = document.getElementById("scientistText");
+                        textbox.value += input + "\n";
+                    }
+                </script>
+                <label for="scientistInput" style="font-size: 16pt;">Your Favorite Artist:</label>
+                <input type="text" id="scientistInput" name="scientistInput"
+                    style="padding-top: 8px; border-radius: 3px;margin-left: 5px;">
+                <button onclick="addScientist()"
+                    style="border: solid 1px grey; border-radius: 5px; padding: 0 8px; background-color: aliceblue; color: black;">+</button>
+                <br>
+                <br>
+                <textarea id="scientistText" rows="5" cols="30"></textarea>
             </div>
             <br>
             <div class="nav_links">
-            <a href="#"><button style="padding-left: 15px;
+                <a href="#"><button style="padding-left: 15px;
             padding-right: 15px;">Back to Top</button></a>
-            <a href="https://www.ladygaga.com/#/"><button>ENTER SITE</a></button></a>
+                <a href="https://www.ladygaga.com/#/"><button>ENTER SITE</a></button></a>
             </div>
-        <div id="footer">
-            &copy; 2023 INTERSCOPE RECORDS
-        </div>
+            <div id="footer">
+                &copy; 2023 INTERSCOPE RECORDS
+            </div>
 </body>
 
 </html>
